--- a/css/hide_avatars.css
+++ b/css/hide_avatars.css
@@ -1,7 +1,7 @@
 /* Profile avatars */
 #avatar-section,
 yt-img-shadow#avatar,
-tp-yt-paper-item > yt-img-shadow
+tp-yt-paper-item > yt-img-shadow,
 #channel-info > yt-img-shadow
 {
 	display: none !important;
