--- a/css/hide_avatars.css
+++ b/css/hide_avatars.css
@@ -1,8 +1,9 @@
 /* Profile avatars */
 #avatar-section,
+#author-thumbnail,
 yt-img-shadow#avatar,
 tp-yt-paper-item > yt-img-shadow,
-#channel-info > yt-img-shadow
+#channel-info yt-img-shadow
 {
 	display: none !important;
 }
